--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
             request.send();
         }
 
-        const quarto = document.getElementById("quarto");
+        const btnquarto = document.getElementById("quarto");
         btnquarto.addEventListener("click", function(){requisita(btnquarto)});
         let btnquartooff = document.getElementById("quartooff");
         btnquartooff.addEventListener("click", function(){requisita(btnquartooff)});
