--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
         background-color:#000;
         color: white;
     }
+    #portao{
+        background-color:#fff;
+        }
     #garagem{
         background-color:#fff;
     }
@@ -60,7 +63,8 @@
     <h1> ligue o comodo da casa </h1>
     <div class = "cores">      
         <button id = "quarto">quarto</button>   
-        <button id = "quartooff">quartooff</button>   
+        <button id = "quartooff">quartooff</button> 
+        <button id = "portao" >portao</button>
         <button id = "garagem">garagem</button>   
         <button id = "garagemoff">garagemoff</button>  
         <button id = "escritorio">escritorio</button>
@@ -85,6 +89,8 @@
         btnquarto.addEventListener("click", function(){requisita(btnquarto)});
         let btnquartooff = document.getElementById("quartooff");
         btnquartooff.addEventListener("click", function(){requisita(btnquartooff)});
+        let btnportao = document.getElementById("portao");
+        btnportao.addEventListener("click", function(){requisita(btnportao)});
         let btngaragem = document.getElementById("garagem");
         btngaragem.addEventListener("click", function(){requisita(btngaragem)});
         let btngaragemoff= document.getElementById("garagemoff");
